# SimSailplane

./: README.md  action.py  main.py  plotter.py  pyproject.toml  requirements.txt  simulation.py
scripts/: main.py
simsailplane/: __init__.py  arguments.py  plotter.py  simulation.py
